--- a/public/src/output.css
+++ b/public/src/output.css
@@ -22,6 +22,7 @@
     --color-gray-900: oklch(21% 0.034 264.665);
     --color-white: #fff;
     --spacing: 0.25rem;
+    --container-2xl: 42rem;
     --text-sm: 0.875rem;
     --text-sm--line-height: calc(1.25 / 0.875);
     --text-lg: 1.125rem;
@@ -197,9 +198,6 @@
   .z-10 {
     z-index: 10;
   }
-  .float-right {
-    float: right;
-  }
   .container {
     width: 100%;
     @media (width >= 40rem) {
@@ -218,17 +216,14 @@
       max-width: 96rem;
     }
   }
-  .m-1 {
-    margin: calc(var(--spacing) * 1);
-  }
-  .m-\[20px\] {
-    margin: 20px;
-  }
-  .m-\[30px\] {
-    margin: 30px;
+  .mx-2 {
+    margin-inline: calc(var(--spacing) * 2);
   }
   .mx-6 {
     margin-inline: calc(var(--spacing) * 6);
+  }
+  .mx-auto {
+    margin-inline: auto;
   }
   .my-4 {
     margin-block: calc(var(--spacing) * 4);
@@ -239,23 +234,14 @@
   .mt-auto {
     margin-top: auto;
   }
-  .mr-\[40px\] {
-    margin-right: 40px;
-  }
-  .mr-\[50px\] {
-    margin-right: 50px;
-  }
   .mb-2 {
     margin-bottom: calc(var(--spacing) * 2);
   }
-  .ml-2 {
-    margin-left: calc(var(--spacing) * 2);
+  .ml-4 {
+    margin-left: calc(var(--spacing) * 4);
   }
   .ml-5 {
     margin-left: calc(var(--spacing) * 5);
-  }
-  .ml-\[50px\] {
-    margin-left: 50px;
   }
   .ml-auto {
     margin-left: auto;
@@ -275,15 +261,6 @@
   .h-8 {
     height: calc(var(--spacing) * 8);
   }
-  .h-\[500px\] {
-    height: 500px;
-  }
-  .h-fit {
-    height: fit-content;
-  }
-  .h-screen {
-    height: 100vh;
-  }
   .min-h-\[200px\] {
     min-height: 200px;
   }
@@ -299,11 +276,11 @@
   .w-\[500px\] {
     width: 500px;
   }
-  .min-w-\[200px\] {
-    min-width: 200px;
+  .w-full {
+    width: 100%;
   }
-  .min-w-\[250px\] {
-    min-width: 250px;
+  .max-w-2xl {
+    max-width: var(--container-2xl);
   }
   .flex-1 {
     flex: 1;
@@ -336,24 +313,19 @@
       margin-block-end: calc(calc(var(--spacing) * 2) * calc(1 - var(--tw-space-y-reverse)));
     }
   }
+  .space-y-4 {
+    :where(& > :not(:last-child)) {
+      --tw-space-y-reverse: 0;
+      margin-block-start: calc(calc(var(--spacing) * 4) * var(--tw-space-y-reverse));
+      margin-block-end: calc(calc(var(--spacing) * 4) * calc(1 - var(--tw-space-y-reverse)));
+    }
+  }
   .space-x-4 {
     :where(& > :not(:last-child)) {
       --tw-space-x-reverse: 0;
       margin-inline-start: calc(calc(var(--spacing) * 4) * var(--tw-space-x-reverse));
       margin-inline-end: calc(calc(var(--spacing) * 4) * calc(1 - var(--tw-space-x-reverse)));
     }
-  }
-  .overflow-hidden {
-    overflow: hidden;
-  }
-  .rounded {
-    border-radius: 0.25rem;
-  }
-  .rounded-\[4px\] {
-    border-radius: 4px;
-  }
-  .rounded-\[10px\] {
-    border-radius: 10px;
   }
   .rounded-lg {
     border-radius: var(--radius-lg);
@@ -365,48 +337,12 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
-  .border-1 {
-    border-style: var(--tw-border-style);
-    border-width: 1px;
-  }
-  .border-2 {
-    border-style: var(--tw-border-style);
-    border-width: 2px;
-  }
-  .border-\[10px\] {
-    border-style: var(--tw-border-style);
-    border-width: 10px;
-  }
   .border-b {
     border-bottom-style: var(--tw-border-style);
     border-bottom-width: 1px;
   }
-  .border-gray-200 {
-    border-color: var(--color-gray-200);
-  }
-  .border-gray-600 {
-    border-color: var(--color-gray-600);
-  }
   .border-gray-700 {
     border-color: var(--color-gray-700);
-  }
-  .border-red-600 {
-    border-color: var(--color-red-600);
-  }
-  .bg-\[\#1E1F24\] {
-    background-color: #1E1F24;
-  }
-  .bg-\[\#1a1a1a\] {
-    background-color: #1a1a1a;
-  }
-  .bg-\[\#2A2B30\] {
-    background-color: #2A2B30;
-  }
-  .bg-\[\#283747\] {
-    background-color: #283747;
-  }
-  .bg-\[\#\] {
-    background-color: #;
   }
   .bg-blue-600 {
     background-color: var(--color-blue-600);
@@ -426,14 +362,17 @@
   .stroke-current {
     stroke: currentcolor;
   }
+  .p-2 {
+    padding: calc(var(--spacing) * 2);
+  }
+  .p-4 {
+    padding: calc(var(--spacing) * 4);
+  }
   .p-6 {
     padding: calc(var(--spacing) * 6);
   }
-  .p-\[20\] {
-    padding: 20;
-  }
-  .p-\[20px\] {
-    padding: 20px;
+  .px-4 {
+    padding-inline: calc(var(--spacing) * 4);
   }
   .px-6 {
     padding-inline: calc(var(--spacing) * 6);
@@ -452,9 +391,6 @@
   }
   .text-right {
     text-align: right;
-  }
-  .align-baseline {
-    vertical-align: baseline;
   }
   .text-2xl {
     font-size: var(--text-2xl);
@@ -489,9 +425,6 @@
   .text-gray-400 {
     color: var(--color-gray-400);
   }
-  .text-red-500 {
-    color: var(--color-red-500);
-  }
   .text-white {
     color: var(--color-white);
   }
@@ -503,10 +436,6 @@
   }
   .shadow-lg {
     --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
-  .shadow-md {
-    --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
   .outline {
@@ -547,12 +476,6 @@
     &::before {
       content: var(--tw-content);
       background-image: linear-gradient(45deg,transparent 25%,rgba(255,255,255,0.4) 50%,transparent 75%);
-    }
-  }
-  .before\:bg-\[linear-gradient\(45deg\,transparent_25\%\,rgba\(255\,255\,255\,0\.5\)_50\%\,transparent_75\%\)\] {
-    &::before {
-      content: var(--tw-content);
-      background-image: linear-gradient(45deg,transparent 25%,rgba(255,255,255,0.5) 50%,transparent 75%);
     }
   }
   .before\:bg-\[length\:200\%_200\%\] {
@@ -599,13 +522,6 @@
       }
     }
   }
-  .hover\:bg-gray-700 {
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-gray-700);
-      }
-    }
-  }
   .hover\:text-red-500 {
     &:hover {
       @media (hover: hover) {
@@ -637,14 +553,6 @@
       }
     }
   }
-  .focus\:ring-gray-600\/50 {
-    &:focus {
-      --tw-ring-color: color-mix(in srgb, oklch(44.6% 0.03 256.802) 50%, transparent);
-      @supports (color: color-mix(in lab, red, red)) {
-        --tw-ring-color: color-mix(in oklab, var(--color-gray-600) 50%, transparent);
-      }
-    }
-  }
   .focus\:outline-none {
     &:focus {
       --tw-outline-style: none;
@@ -664,9 +572,77 @@
       background-color: var(--color-blue-700);
     }
   }
-  .active\:bg-gray-600 {
-    &:active {
-      background-color: var(--color-gray-600);
+  .sm\:inline-block {
+    @media (width >= 40rem) {
+      display: inline-block;
+    }
+  }
+  .sm\:w-auto {
+    @media (width >= 40rem) {
+      width: auto;
+    }
+  }
+  .sm\:flex-row {
+    @media (width >= 40rem) {
+      flex-direction: row;
+    }
+  }
+  .sm\:space-y-0 {
+    @media (width >= 40rem) {
+      :where(& > :not(:last-child)) {
+        --tw-space-y-reverse: 0;
+        margin-block-start: calc(calc(var(--spacing) * 0) * var(--tw-space-y-reverse));
+        margin-block-end: calc(calc(var(--spacing) * 0) * calc(1 - var(--tw-space-y-reverse)));
+      }
+    }
+  }
+  .sm\:space-x-4 {
+    @media (width >= 40rem) {
+      :where(& > :not(:last-child)) {
+        --tw-space-x-reverse: 0;
+        margin-inline-start: calc(calc(var(--spacing) * 4) * var(--tw-space-x-reverse));
+        margin-inline-end: calc(calc(var(--spacing) * 4) * calc(1 - var(--tw-space-x-reverse)));
+      }
+    }
+  }
+  .md\:mx-6 {
+    @media (width >= 48rem) {
+      margin-inline: calc(var(--spacing) * 6);
+    }
+  }
+  .md\:mt-auto {
+    @media (width >= 48rem) {
+      margin-top: auto;
+    }
+  }
+  .md\:ml-5 {
+    @media (width >= 48rem) {
+      margin-left: calc(var(--spacing) * 5);
+    }
+  }
+  .md\:flex-row {
+    @media (width >= 48rem) {
+      flex-direction: row;
+    }
+  }
+  .md\:p-0 {
+    @media (width >= 48rem) {
+      padding: calc(var(--spacing) * 0);
+    }
+  }
+  .md\:p-4 {
+    @media (width >= 48rem) {
+      padding: calc(var(--spacing) * 4);
+    }
+  }
+  .md\:p-6 {
+    @media (width >= 48rem) {
+      padding: calc(var(--spacing) * 6);
+    }
+  }
+  .md\:px-6 {
+    @media (width >= 48rem) {
+      padding-inline: calc(var(--spacing) * 6);
     }
   }
 }
